--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -105,7 +105,7 @@ html, body {
 	
 	
 	.bigPicture img{
-		border: 0; margin-left: -2%; padding-right: 0%; width: 100%;
+		border: 0; margin-left: -2%; padding:2% 15% 2% 5%; height: 300px; width: 100%;
 	}
 
 }
@@ -117,7 +117,7 @@ html, body {
 		 margin-left: -10%; margin:15px; border-radius:1%; width:100%; position-fixed
 	}
 	.bigPicture img{
-		border: 0; margin-left: -2%; padding-right: 0%; width: 100%;
+		border: 0; margin-left: -2%; padding:2% 15% 2% 5%; height: 300px; width: 100%;
 	}
 }
 @media(min-width:992px) {
@@ -128,7 +128,9 @@ html, body {
 		 opacity:; margin:15px; border-radius:1%; width:100%; position-fixed
 	}
 	
-	
+	.bigPicture img{
+		border: 0; margin-left: -2%; padding:2% 15% 2% 5%; height: 500px; width: 100%;
+	}
 }
 
   </style>
@@ -317,7 +319,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
  <header class="bigPicture">	
 	<div class="swiper-slide slide-content d-flex align-items-center">
-        <img src="http://ggeventshall.com/images/2018/11/30/kj-logo2.png" height="500" width="475" class="img-responsive">
+        <img src="http://ggeventshall.com/images/2018/11/30/kj-logo2.png" height="400" width="300" class="img-responsive" style="padding:2% 15% 2% 5%;">
 		</div>
 </header>		
 	
@@ -340,14 +342,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="col-sm-6 col-lg-6">
 						<div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
 							<div class="picture">
-								<img src="https://img.foodbevg.com/1/v/t1.0-9/s720x720/64932854_954997424892358_5894168419858644992_n.png?_nc_cat=103&_nc_oc=AQn6ShvMPTfhs4ep-VXlVCRvx8QJZlSHMufbuw7P9mrDLOzqBZCGRE9ehvfCoXi4U6NkpczL-X2dEZXN5qUok28K&_nc_ht=scontent.xx&oh=4e070976e65e61a0f12ccd8912955c16&oe=5D7B9879"  height="525" width="475" class="img-responsive" style="margin-right: 20%;">
+								<img src="https://img.foodbevg.com/1/v/t1.0-9/s720x720/64932854_954997424892358_5894168419858644992_n.png?_nc_cat=103&_nc_oc=AQn6ShvMPTfhs4ep-VXlVCRvx8QJZlSHMufbuw7P9mrDLOzqBZCGRE9ehvfCoXi4U6NkpczL-X2dEZXN5qUok28K&_nc_ht=scontent.xx&oh=4e070976e65e61a0f12ccd8912955c16&oe=5D7B9879"  height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
 							</div>
 						</div></div>
 						
 						<div class="col-sm-6 col-lg-6">
 						<div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
 							<div class="picture">
-								<img src="https://scontent-lga3-1.cdninstagram.com/vp/77b151f7d3d4d5d138775fbfc9d8015c/5DB83B42/t51.2885-15/fr/e15/s1080x1080/58722677_526863451051483_2774287056960760170_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com" height="525" width="475" class="img-responsive" style="margin-right: 20%;">
+								<img src="https://scontent-lga3-1.cdninstagram.com/vp/77b151f7d3d4d5d138775fbfc9d8015c/5DB83B42/t51.2885-15/fr/e15/s1080x1080/58722677_526863451051483_2774287056960760170_n.jpg?_nc_ht=scontent-lga3-1.cdninstagram.com" height="525" width="475" class="img-responsive" style="padding:2% 15% 2% 5%;">
 							</div>
 						</div></div>
 							
