--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h1 class="title-blue">What We Offer</h1>
                     </div>
 <main class="grid-container">
-<div class="grid-item">
+<div class="grid-item" style="margin-bottom: 10%;">
 <div class="wrapper">
 <div class="card-container">
 <div class="flip-animation">
