--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -317,7 +317,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   
 <div class="all" style="">
 
- <header class="bigPicture">	
+ <header class="bigPicture" style="margin-top: 3%;">	
 	<div class="swiper-slide slide-content d-flex align-items-center">
         <img src="http://ggeventshall.com/images/2018/11/30/kj-logo2.png" height="400" width="300" class="img-responsive" style="padding:2% 15% 2% 5%;">
 		</div>
