--- a/about.html
+++ b/about.html
@@ -109,6 +109,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
 }
+
+
+blockquote {
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+}
 	</style>
 </head>
 
@@ -304,8 +314,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <h3>Safety and Security</h3>
 						</span>
-                        <p class="description">Any loss or damage to the facility caused by guests may result in a damage assessment fee.
-							Children should be supervised at all times. We are not responsible for any property, personal and otherwise, stolen, lost or damaged in or around our venue.</p>
+                        <p class="description">
+						<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
+						Any loss or damage to the facility caused by guests may result in a damage assessment fee.
+							Children should be supervised at all times. We are not responsible for any property, personal and otherwise, stolen, lost or damaged in or around our venue.
+							</footer>
+							</blockquote>
+							</p>
                 </div>
                 <div class="timeline">
 				<span style="color:#ee1515;">
@@ -314,12 +330,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <h3 class="title-primary">Damage & Liability</h3></span>
                         <p class="description">
+						<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
 							We assume no responsibility for damages or loss of any merchandise
 							or materials brought on the property at any time.
 							We are not liable for any and all damages, expenses and losses
 							including theft and property loss, caused by any person
 							attending, or providing services connected with the
 							client’s use of the facility.
+							</footer>
+							</blockquote>
 						</p>
                 </div>
 				<div class="timeline">
@@ -329,9 +349,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <h3 class="title-primary">Delivery and Pickup</h3></span>
                         <p class="description">
+						<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
 							All deliveries relating to the scheduled event must be delivered
 							and picked up within the contracted event hours,
-							unless agreed upon with management.</p>
+							unless agreed upon with management.
+							</footer>
+							</blockquote>
+							</p>
                     </div>
                 </div>
                 <div class="timeline">
@@ -340,9 +365,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					<i class="fa fa-user"></i>
                         </div>
                         <h3 class="title-primary">Parking</h3></span>
-                        <p class="description"> Ample parking space has been provided for your events.
+                        <p class="description"> 
+						<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
+						Ample parking space has been provided for your events.
 							Vehicles are only allowed parking for the contracted
 							event hours of their event.
+							</footer>
+							</blockquote>
 						</p>
                 </div>
 				<div class="timeline">
@@ -352,8 +382,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <h3 class="title-primary">Alcohol</h3></span>
                         <p class="description">
+						<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
 							We reserve the right to refuse or stop alcoholic beverage
 							service to any individual or group at any time.
+							</footer>
+							</blockquote>
 						</p>
                 </div>
 				<div class="timeline">
@@ -363,10 +397,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <h3 class="title-primary">Timing</h3></span>
                         <p class="description">
+						<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
 							All events should conclude by 7pm. 
 							All equipment for the event must be removed
 							immediately following the event,
 							unless prior arrangements have been made with management.
+							</footer>
+							</blockquote>
 						</p>
                 </div>
                 <div class="timeline">
@@ -374,8 +412,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="timeline-icon">
 					<i class="fa fa-user"></i>
                         </div>
-                        <h3 class="title-primary">Photograph</h3>y</span>
+                        <h3 class="title-primary">Photography</h3></span>
                         <p class="description">
+						<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
 							For promotional purposes, we reserve the right to take a limited
 							number of royalty-free photographs of the user’s activities
 							in our venue. Such photographs shall be the Great God Events Hall’s 
@@ -383,6 +423,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							term, and we shall have the right to copy, exhibit, display, 
 							and otherwise make use of such photographs by any means and 
 							media throughout the world.
+							</footer>
+							</blockquote>
 						</p>
                 </div>
 				<div class="timeline">
@@ -392,26 +434,29 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                         <h3 class="title-primary">Restrictions</h3></span>
                         <p class="description">
-							<ul>
-								<li>Great God Events Hall facility and grounds shall not be used for any unlawful purpose. 
+							<blockquote class="blockquote text-center">
+							  <footer class="blockquote-footer">
+							  Great God Events Hall facility and grounds shall not be used for any unlawful purpose. 
 							This venue reserves the right to refuse use of the facility and grounds to any organization
 							or individual in the event that a program or its content does not comply with the venue’s 
-							policies and guidelines. </li>
-								<li>Smoking of any drugs, including marijuana, is not permitted on the premise.</li>
-									<li>Non-contracted spaces are off limits at all times.</li>
-									<li>Fighting is not allowed on the premises</li>
-									<li>During and after events hours, client and guests are expected to exercise decency in the usage of our halls, 
+							policies and guidelines. </footer>
+								<footer class="blockquote-footer">Smoking of any drugs, including marijuana, is not permitted on the premise.</footer>
+									<footer class="blockquote-footer">Non-contracted spaces are off limits at all times.</footer>
+									<footer class="blockquote-footer">Fighting is not allowed on the premises.</footer>
+									<footer class="blockquote-footer">During and after events hours, client and guests are expected to exercise decency in the usage of our halls, 
 									rest rooms, wash hand basins and other Great God Events Hall facilities. 
 									Clients and guests are explicitly prohibited from urinating around our premises. 
-									Restrooms have been provided.</li>
-								</ul>
-						</p>
+									Restrooms have been provided.
+									</blockquote>
+								</p>
                 </div>
             </div>
         </div>
     </div></div>
 	</div>
 </section>
+
+
     <!-- Trust End -->
     
     <!-- Testimonial and Clients Start -->
