--- a/about.html
+++ b/about.html
@@ -280,8 +280,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     </div>
 					
-                <div class="col-md-6" data-aos="fade-left" data-aos-delay="400" data-aos-duration="800">
-                    <div class="featured-img">
+                <div class="col-md-6  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin-top: 5%;">
+                    <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="about us" class="img-responsive">
                         <img class="featured-small" src="assets/images/Webp.net-gifmaker.gif" alt="about us" class="img-responsive">
                     </div>
