--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -307,7 +307,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p>Pay Us a Visit Today and Experience Our Great Service Offerings.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
-                    <a href="#" class="btn btn-primary">Join Newsletter</a>
+                    <a href="contact.html" class="btn btn-primary">Join Newsletter</a>
                 </div>
             </div>
         </div>
