--- a/contact.html
+++ b/contact.html
@@ -305,7 +305,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p>...Why spend more for less! Rather spend less for more.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
-                    <a href="#" class="btn btn-primary">Join Newsletter</a>
+                    <a href="contact.html" class="btn btn-primary">Join Newsletter</a>
                 </div>
             </div>
         </div>
