--- a/eventhall.html
+++ b/eventhall.html
@@ -458,7 +458,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p>Join the ranks of successful events hosted<br> at Great God Events Hall.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
-                    <a href="#" class="btn btn-primary">Contact Us</a>
+                    <a href="contact.html" class="btn btn-primary">Join Newsletter</a>
                 </div>
             </div>
         </div>
