--- a/shops.html
+++ b/shops.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p>Move your business to the next level Rent our shops to access great advantages.</p>
                 </div>
                 <div class="subscribe-btn" data-aos="fade-left" data-aos-delay="400" data-aos-offset="0">
-                    <a href="#" class="btn btn-primary">Join Newsletter</a>
+                    <a href="contact.html" class="btn btn-primary">Join Newsletter</a>
                 </div>
             </div>
         </div>
