--- a/about.html
+++ b/about.html
@@ -76,6 +76,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		overflow-y: auto;
 	}
 	
+	.darken-grey-text {
+    color: #2E2E2E;
+}
+	
 	@media(max-width:420px) {
 	.featured-img {
 		margin-left: 0%; margin:15px; border-radius:1%; margin-top: 2%;
@@ -281,9 +285,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
 					
                 <div class="col-md-6  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin-top: 5%;">
-                    <div class="featured-img d-none d-sm-flex d-xs-flex">
+                    <div class="featured-img">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="about us" class="img-responsive">
-                        <img class="featured-small" src="assets/images/Webp.net-gifmaker.gif" alt="about us" class="img-responsive">
+                        <div class="text-center darken-grey-text mb-4">
+                        <iframe width="400" height="300" src="https://www.youtube.com/embed/GrgTecML8yM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+						</div>
                     </div>
                 </div>
             </div>
