--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		overflow-y: auto;
 	}
 	
+	.darken-grey-text {
+    color: #2E2E2E;
+}
+	
       /* 1600 / 16 = 100em 
 /* 	mobile 90% event  */
 .grid-container {
@@ -1081,10 +1085,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <a href="about.html" class="btn btn-primary">Know More</a>
                 </div>
 				<div class="col-md-6  " data-aos="fade-left" data-aos-delay="400" data-aos-duration="800" style="margin-top: 5%;">
-                    <div class="featured-img d-none d-sm-flex d-xs-flex">
+                    <div class="featured-img">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="Featured 1">
-                        <img class="featured-small" src="assets/images/Webp.net-gifmaker.gif" alt="Featured 2">
-						https://web.facebook.com/ggeventshall/videos/346421912588732/?t=33
+						<div class="text-center darken-grey-text mb-4">
+                        <iframe width="400" height="300" src="https://www.youtube.com/embed/GrgTecML8yM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+						</div>
                     </div>
                 </div>
             </div>
