--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Choose Flexible<br> Usage Options
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Get access to Great God Events Halls, your venue for great <br> and successful events.
+                                    <p data-aos="fade-right" data-aos-delay="600">Get access to Great God Events Halls, your venue for great and successful events.
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
                                     <a data-aos="fade-right" data-aos-delay="900" href="contact.html" class="btn btn-primary">Book
@@ -939,7 +939,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Beautiful<br> and Spacious Halls
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Whether you need eventspace for one hour or more,<br> we have a solution for you.
+                                    <p data-aos="fade-right" data-aos-delay="600">Whether you need eventspace for one hour or more, we have a solution for you.
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
                                     <a data-aos="fade-right" data-aos-delay="900" href="contact.html" class="btn btn-primary">Book
@@ -950,7 +950,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="single-slide">
                                     <h1 data-aos="fade-right" data-aos-delay="200">Join our<br> successful events
                                     </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">Join people with successful events<br> hosted by us.
+                                    <p data-aos="fade-right" data-aos-delay="600">Join people with successful events hosted by us.
                                     </p>
                                     <a data-aos="fade-right" data-aos-delay="900" href="eventhall.html" class="btn btn-primary">More about our Halls</a>
                                     <a data-aos="fade-right" data-aos-delay="900" href="contact.html" class="btn btn-primary">Book
