--- a/Kingstine-JoFoods.html
+++ b/Kingstine-JoFoods.html
@@ -286,7 +286,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <div class="swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide" >
                                     <h1 data-aos="fade-center" data-aos-delay="200">Kingstine-Jo Foods</h1>
-                                    <p data-aos="fade-center" data-aos-delay="600">Welcome to Kingstine-Jo Foods, we deliver in <br>20 minutes!</p>
+                                    <p data-aos="fade-center" data-aos-delay="600">Welcome to Kingstine-Jo Foods, we deliver in 20 minutes!</p>
                                 </div>
                             </div>
                             </div>
