--- a/shops.html
+++ b/shops.html
@@ -72,10 +72,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	}
 	
 	 /*media quary */
-@media(max-width:420px) {
+@media(min-width:420px) {
 
-	.hero .slide-content p {
-}
+	 .navbar-brand img {
+    width: 260px;
+	height: 50px;
+	display: inline;
+	position: relative;
+  }
+  
+   .hero .slide-content p {
+    padding-right: 50px;
+	display: inline-block;
+	position: relative;
+  }
+  
+  .hero .slide-content h1 {
+    margin: 100px 0 50px 0;
+  }
 }
 </style>
 </head>
