--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
-                    <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i> +2348140554601</a>
+                    <a href="tel:+234 802 695 8952" class="tel"><i class="fa fa-phone" aria-hidden="true"></i> +234 802 695 8952</a>
                     <a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"
                             aria-hidden="true"></i>info@GGEventhalls.com</a>
                 </div>
@@ -1517,7 +1517,7 @@ Utilise our well situated shops to propel your business forward with access to t
                                 <i class="fa fa-phone"></i>
                                 <div class="media-body ml-3">
                                     <h6>Call us & Book us</h6>
-                                    <a href="tel: +2348140554601">  +234 81 405 54 601</a>
+                                    <a href="tel: +234 802 695 8952">  +234 802 695 8952</a>
                                 </div>
                             </div>
                             <div class="media">
