--- a/shops.html
+++ b/shops.html
@@ -72,24 +72,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	}
 	
 	 /*media quary */
-@media(min-width:420px) {
+@media(max-width:420px) {
 
-	 .navbar-brand img {
-    width: 260px;
-	height: 50px;
-	display: inline;
-	position: relative;
-  }
-  
-   .hero .slide-content p {
-    padding-right: 50px;
-	display: inline-block;
-	position: relative;
-  }
-  
-  .hero .slide-content h1 {
-    margin: 100px 0 50px 0;
-  }
 }
 </style>
 </head>
@@ -114,7 +98,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
-                    <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i> +2348140554601</a>
+                    <a href="tel:+234 802 695 8952" class="tel"><i class="fa fa-phone" aria-hidden="true"></i> +234 802 695 8952</a>
                     <a href="mailto: info@GGEventhalls.com"><i class="fa fa-envelope"
                             aria-hidden="true"></i>info@GGEventhalls.com</a>
                 </div>
@@ -362,7 +346,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <i class="fa fa-phone"></i>
                                 <div class="media-body ml-3">
                                     <h6>Call us & Book us</h6>
-                                    <a href="tel: +2348140554601">  +234 81 405 54 601</a>
+                                    <a href="tel: +234 802 695 8952">  +234 802 695 8952</a>
                                 </div>
                             </div>
                             <div class="media">
