--- a/index.html
+++ b/index.html
@@ -847,6 +847,15 @@ form input{
 	margin-left: 0%; margin:15px; border-radius:1%; height: 30%; margin-top: 2%;
 	}
 }
+
+ .hero .slide-content p {
+    margin-bottom: 5%;
+  }
+  
+  .hero .slide-content a {
+    margin-top: 5%;
+	
+  }
 </style>
 </head>
 
