--- a/about.html
+++ b/about.html
@@ -132,6 +132,33 @@ blockquote {
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      xfbml            : true,
+      version          : 'v4.0'
+    });
+  };
+
+  (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="1016450635227960"
+  theme_color="#ee1515"
+  logged_in_greeting="We are live and ready to chat with you now. Say something to start a live chat."
+  logged_out_greeting="We are live and ready to chat with you now. Say something to start a live chat.">
+</div>
+
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.3"></script>
 
@@ -288,7 +315,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="featured-img d-none d-sm-flex d-xs-flex">
                         <img class="featured-big" src="assets/images/featured-img1.jpg" alt="about us" class="img-responsive">
                         <div class="text-center darken-grey-text mb-4">
-                        <iframe width="350" height="300" src="https://www.youtube.com/embed/GrgTecML8yM?rel=0&showinfo=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
+                        <iframe width="350" height="300" src="https://youtu.be/GrgTecML8yM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" class="featured-small" allowfullscreen></iframe>
 						</div>
                     </div>
                 </div>
@@ -629,7 +656,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div
                     class="footer-content text-center text-lg-left d-lg-flex justify-content-between align-items-center">
                     <p class="mb-0" data-aos="fade-right" data-aos-offset="0">&copy; 2019 GGEventHalls, All Rights Reserved. <!-- <a href="https://freehtml5.co/multipurpose" target="_blank" class="fh5-link">FreeHTML5.co </a> --></p>
-                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="https://tawk.to/chat/5d46fc867d27204601c938f0/default" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>LIVE CHAT </a><a
+                    <p class="mb-0" data-aos="fade-left" data-aos-offset="0"><a href="m.me/ggeventshall" class="promotion-btn"> <i class="fa fa-weixin" aria-hidden="true"></i>LIVE CHAT </a><a
                         <a href="#">God is Great!</a></p>
                 </div>
             </div>
@@ -656,19 +683,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
 <!-- // new line -->
-	<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/5d46fc867d27204601c938f0/default';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+	
 </body>
 
 </html>
